# launchtrail

./: .gitignore  Cargo.toml  Makefile  README.md  launchtrail.did
.github/workflows/: release.yml
mk/: Makefile.inc
src/: canister-info.rs  hello.rs  launch-trail.rs  launchtrail.rs
tests/: configure.repl  install.repl  prelude.repl  run.sh
